--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,12 @@ dependencies {
 
     //navigation
     implementation "androidx.navigation:navigation-compose:2.6.0"
+
+    //retrofit
+    def retrofit_version = "2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation("com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.11")
 }
 kapt {
     correctErrorTypes true
