--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,10 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation("androidx.room:room-ktx:$room_version")
 
+    //lottie
+    implementation 'com.airbnb.android:lottie-compose:6.0.0'
+
+
 
 }
 kapt {
